test/bad/type_declaration_06.mpp
data foo = #Quux int | #Bar;
